src/test/ui/trivial-bounds/trivial-bounds-inconsistent-projection-error.stderr
error[E0308]: mismatched types
  --> $DIR/trivial-bounds-inconsistent-projection-error.rs:20:5
   |
LL | fn global_bound_is_hidden() -> u8
   |                                -- expected `u8` because of return type
...
LL |     B::get_x() //~ ERROR
   |     ^^^^^^^^^^ expected u8, found i32

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
